--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,8 +8,8 @@ spring.mvc.view.suffix=.jsp
 
 spring.datasource.driver-class-name=oracle.jdbc.OracleDriver
 spring.datasource.url=jdbc:oracle:thin:@localhost:1521:xe
-spring.datasource.username=c##fetc
-spring.datasource.password=robolink100
+spring.datasource.username=*
+spring.datasource.password=*
 
 
 spring.jpa.open-in-view=false
